Add language configuration options

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 			"id": 			"nearley",
 			"extensions": 	[ ".ne" ],
 			"aliases": 		[ "Nearley", "nearley" ],
-			"filenames": 	[ ".ne" ]
+			"filenames": 	[ ".ne" ],
+			"configuration": "./language-configuration.json"
 		}],
 		"grammars": [{
 			"language": 	"nearley",
