--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
 	"displayName": 	"Nearley",
 	"description": 	"Nearley support for Visual Studio Code",
 	"icon": 		"logo.png",
-	"version":		"1.0.1",
+	"version":		"1.0.2",
 	"publisher": 	"karyfoundation",
 	"engines": {
 		"vscode": "^0.10.1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pmkary/nearley-vscode"
 	},
 	"categories": [
 		"Other"
