Don't automatch percent sign

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -3,6 +3,6 @@
     "lineComment": "#"
   },
   "brackets": [["{", "}"], ["[", "]"], ["(", ")"]],
-  "autoClosingPairs": [["%", "%"], ["{", "}"], ["[", "]"], ["(", ")"], ["\"", "\""], ["`", "`"]],
-  "surroundingPairs": [["%", "%"], ["{", "}"], ["[", "]"], ["(", ")"], ["\"", "\""], ["`", "`"] ]
+  "autoClosingPairs": [["{", "}"], ["[", "]"], ["(", ")"], ["\"", "\""], ["`", "`"]],
+  "surroundingPairs": [["{", "}"], ["[", "]"], ["(", ")"], ["\"", "\""], ["`", "`"] ]
 }
